--- a/helm/report-service/Chart.yaml
+++ b/helm/report-service/Chart.yaml
@@ -2,6 +2,8 @@ apiVersion: v2
 name: report-service
 description: A Helm chart for Kubernetes
 
+namespace: default
+
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
@@ -16,6 +18,11 @@ type: application
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
+
+# dependencies:
+#   - name: redis
+#     version: 0.1.0
+#     repository: https://charts.bitnami.com/bitnami
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
