--- a/helm/user-service/templates/service.yaml
+++ b/helm/user-service/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
-metadata:
-  name: {{ include "user-service.fullname" . }}
+metadata: {{ $fullname := printf "%s-%s" .Release.Name .Chart.Name | trunc 63 | trimSuffix "-" }}
+  name: {{ $fullname }}
   labels:
-    {{- include "user-service.labels" . | nindent 4 }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+  - port: {{ .Values.service.externalPort }}
+    targetPort: {{ .Values.service.internalPort }}
+    protocol: TCP
+    name: {{ .Values.service.name }}
   selector:
-    {{- include "user-service.selectorLabels" . | nindent 4 }}
+    app: {{ $fullname }}
