update: added a global prefix for both services

--- a/helm/user-service/values.yaml
+++ b/helm/user-service/values.yaml
@@ -13,7 +13,7 @@ mapconfig:
 
 service:
   name: user-service
-  type: LoadBalancer
+  type: ClusterIP
   internalPort: 4100
   externalPort: 4100
 
