fix: moved app port to configmap

--- a/helm/report-service/templates/configmap.yaml
+++ b/helm/report-service/templates/configmap.yaml
@@ -6,3 +6,4 @@ metadata:
 data:
   REDIS_HOST: "{{ .Values.redis.REDIS_HOST }}"
   REDIS_PORT: "{{ .Values.redis.REDIS_PORT }}"
+  APP_PORT: "{{ .Values.app.APP_PORT }}"
