--- a/helm/user-service/templates/deployment.yaml
+++ b/helm/user-service/templates/deployment.yaml
@@ -26,11 +26,11 @@ spec:
               name: {{ .Release.Name }}-configmap
         livenessProbe:
           httpGet:
-            path: /
+            path: /users
             port: {{ .Values.service.internalPort | int }}
         readinessProbe:
           httpGet:
-            path: /
+            path: /users
             port: {{ .Values.service.internalPort | int }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
