--- a/helm/report-service/templates/secret.yaml
+++ b/helm/report-service/templates/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: {{ .Values.mapconfig.namespace }}
 type: Opaque
 data:
-  password: {{ .Values.secret.password | b64enc }}
-  token: {{ .Values.secret.token | b64enc }}
+  TEST_PASSWORD: {{ .Values.secret.data.TEST_PASSWORD | b64enc }}
+  TEST_TOKEN: {{ .Values.secret.data.TEST_TOKEN | b64enc }}
