--- a/helm/report-service/templates/deployment.yaml
+++ b/helm/report-service/templates/deployment.yaml
@@ -24,6 +24,8 @@ spec:
         envFrom:
           - configMapRef:
               name: {{ .Release.Name }}-configmap
+          - secretRef:
+              name: {{ .Release.Name }}-secret
         livenessProbe:
           httpGet:
             path: /report
