--- a/helm/user-service/templates/deployment.yaml
+++ b/helm/user-service/templates/deployment.yaml
@@ -15,6 +15,7 @@ spec:
         app: {{ $fullname }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
     spec:
       containers:
       - name: {{ .Chart.Name }}
