--- a/helm/user-service/templates/secret.yaml
+++ b/helm/user-service/templates/secret.yaml
@@ -7,3 +7,7 @@ type: Opaque
 data:
   TEST_PASSWORD: {{ .Values.secret.data.TEST_PASSWORD | b64enc }}
   TEST_TOKEN: {{ .Values.secret.data.TEST_TOKEN | b64enc }}
+  POSTGRES_HOST: {{ .Values.secret.postgres.POSTGRES_HOST | b64enc }}
+  POSTGRES_DB: {{ .Values.secret.postgres.POSTGRES_DB | b64enc }}
+  POSTGRES_PASSWORD: {{ .Values.secret.postgres.POSTGRES_PASSWORD | b64enc }}
+  POSTGRES_USER: {{ .Values.secret.postgres.POSTGRES_USER | b64enc }}
