--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "ioredis": "^5.6.0"
+    "ioredis": "^5.6.0",
+    "pg": "^8.14.1"
   }
 }
