--- a/helm/user-service/templates/deployment.yaml
+++ b/helm/user-service/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        imagePullPolicy: Always
         ports:
           - containerPort: {{ .Values.service.internalPort | int }}
         envFrom:
